website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: cnd-website
  labels:
    app.kubernetes.io/name: website
    app.kubernetes.io/component: static-site
    app.kubernetes.io/part-of: cnd-france
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: website
        app.kubernetes.io/component: static-site
        app.kubernetes.io/part-of: cnd-france
    spec:
      securityContext:
        runAsNonRoot: false
        fsGroup: 0
      containers:
        - name: website
          image: ghcr.io/cloudnativefrance/website:main-eb2f54f-1791299571 # {"$imagepolicy": "flux-system:cnd-website"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETGID
                - SETUID
                - NET_BIND_SERVICE
